<resources>
    <string name="app_name">DiscussGo</string>

    <!--first screen-->
    <string name="navLogin">Login</string>
    <string name="navRegister">Register</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="logo">Logo</string>
    <string name="loading">Loading</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="image">Upload image</string>
    <string name="image_description">Profile picture</string>
    <string name="add">+</string>
    <string name="find">Find</string>

    <!--second screen-->
    <string name="titleActivityMainScreen">Main Screen</string>
    <string name="navSearch">Search</string>
    <string name="navCreate">Add</string>
    <string name="navMap">Map</string>
    <string name="navNotifications">Notifications</string>
    <string name="navProfile">Profile</string>
    <string name="title_activity_main_screen">MainActivity</string>
    <string name="number_of_discussions">Number of discussions: </string>
    <string name="count">0</string>
    <string name="points_info">points_info</string>
    <string name="rank_level">rank_level</string>
    <string name="profile_name">profile_name</string>
    <string name="edit">EDIT</string>
    <string name="profile_info_email">email</string>
    <string name="firstname_lastname">firstname_lastname</string>
    <string name="rank">Rank</string>
    <string name="profile_picture">profile_picture</string>
    <string name="points">Points</string>
    <string name="info">INFO</string>
    <string name="friends">FRIENDS</string>
    <string name="history">HISTORY</string>
    <string name="number_of_friends">Number of friends: </string>
    <string name="logout">Logout</string>
    <string name="only_friends">Only friends</string>
    <string name="all_discussions">All discussions</string>
    <string name="remove_filter">Show all users</string>
    <string name="user">USER</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="refresh">REFRESH</string>
    <string name="add_friend">Add friend</string>
    <string name="create_discussion">CREATE DISCUSSION</string>
    <string name="edit_text_preview">Edit text preview</string>
    <string name="discussion_topic">Discussion topic</string>
    <string name="status">Status</string>
    <string name="description_optional">Description</string>
    <string name="create">Create</string>
    <string name="close">Close</string>
    <string name="public_create">Public</string>
    <string name="create_new_discussion">Create new discussion</string>
    <string name="create_private">Private</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="discussion_started_by">Discussion started by:</string>
    <string name="owner">Owner</string>
    <string name="exit">End discussion</string>
    <string name="discussionHistory">discussion</string>
    <string name="navRanking">Ranking</string>
    <string name="discuss_go_rankings">Discuss Go rankings</string>
    <string name="zeroHistory">0</string>
    <string name="join">Join</string>
    <string name="notifications_label">Notifications</string>
    <string name="accept_notification">Accept</string>
    <string name="deny_notification">Deny</string>
    <string name="notificationId">notification</string>
    <string name="friendView">friend</string>
    <string name="size">Size</string>
    <string name="exit_join">Exit</string>
    <string name="status_join">Status</string>
    <string name="close_info">close</string>
    <string name="username_info">username</string>
    <string name="email_info">email</string>
    <string name="search_for_discussions">Search for discussions</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="exit_search">Exit</string>
</resources>
