<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <ImageView
        android:id="@+id/profile_info_avatar"
        android:layout_width="217dp"
        android:layout_height="217dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_name"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/profile_info_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname_lastname"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_rank"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_email" />

    <TextView
        android:id="@+id/profile_info_rankinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/rank_level"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_fullname" />

    <TextView
        android:id="@+id/profile_info_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/rank"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/profile_info_rankinfo"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_fullname" />

    <TextView
        android:id="@+id/profile_info_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/points"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_rank" />

    <Button
        android:id="@+id/profile_info_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/logout"
        app:backgroundTint="#F44336"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_points" />

    <TextView
        android:id="@+id/profile_info_pointsinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/points_info"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_rankinfo" />

    <TextView
        android:id="@+id/profile_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_avatar"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_horizontal" />

    <TextView
        android:id="@+id/profile_info_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_info_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_info_fullname"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_info_avatar" />

</androidx.constraintlayout.widget.ConstraintLayout>