<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/in_discussion_layout_horizontal_guide_join"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintGuide_percent="0.02" />
    <TextView
        android:id="@+id/in_discussion_topic_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/topic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/in_discussion_layout_horizontal_guide_join"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="41dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/in_discussion_description_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/in_discussion_status_join" />

    <TextView
        android:id="@+id/in_discussion_owner_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/owner"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintLeft_toRightOf="@id/in_discussion_owner_label_join"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/in_discussion_description_join" />

    <TextView
        android:id="@+id/in_discussion_owner_label_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/discussion_started_by"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/in_discussion_description_join" />

    <ListView
        android:id="@+id/in_discussion_users_join"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        android:layout_weight="3"
        android:cacheColorHint="#FFFFFF"
        tools:ignore="NestedScrolling,ObsoleteLayoutParam"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_discussion_owner_join"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="42dp" />

    <Button
        android:id="@+id/in_discussion_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:enabled="false"
        app:backgroundTint="#4CAF50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/in_discussion_users_join" />

    <Button
        android:id="@+id/activity_in_discussion_exit_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_join"
        app:backgroundTint="#F44336"
        app:iconTint="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_discussion_join"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="627dp" />

    <TextView
        android:id="@+id/in_discussion_status_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_join"
        android:textColor="#F44336"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/in_discussion_topic_join" />
</androidx.constraintlayout.widget.ConstraintLayout>