<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/profile_view_avatar"
            android:layout_width="match_parent"
            android:layout_height="413dp"
            android:contentDescription="@string/profile_picture"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/profile_view_username"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/username_info"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profile_view_email"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email_info"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profile_view_friends_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Friends: "
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_view_friends_count"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="count"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profile_view_points_label"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Points:"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_view_points"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="count"
            android:textSize="20sp" />

        <Button
            android:id="@+id/profile_view_close"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:text="@string/close_info"
            app:backgroundTint="#009688" />
    </LinearLayout>
</ScrollView>