<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/map_filter_friends"
        android:layout_width="75dp"
        android:layout_height="46dp"
        android:text="@string/only_friends"
        android:textSize="10sp"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/map_filter_no"
        android:layout_width="79dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="@string/remove_filter"
        android:textSize="10sp"
        app:backgroundTint="#009688"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_filter_discussions"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/map_filter_discussions"
        android:layout_width="104dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/all_discussions"
        android:textSize="10sp"
        app:backgroundTint="#009688"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_filter_friends"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/map_create_discussion"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:layout_marginTop="440dp"
        android:text="@string/create_discussion"
        android:textSize="10sp"
        app:backgroundTint="#4CAF50"
        app:cornerRadius="40dp"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_filter_no"
        tools:ignore="SmallSp" />

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            tilesource="Map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>