<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListView
        android:id="@+id/add_new_friends_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.68"
        android:layout_weight="3"
        android:cacheColorHint="#FFFFFF"
        tools:ignore="NestedScrolling,ObsoleteLayoutParam"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_friends_refresh"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="42dp" />

    <Button
        android:id="@+id/add_new_friends_add"
        android:layout_width="125dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:text="@string/add_friend"
        app:backgroundTint="#4CAF50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_new_friends_send" />

    <Button
        android:id="@+id/add_new_friends_send"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:text="@string/send_request"
        app:backgroundTint="#4CAF50"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_new_friends_list" />

    <Button
        android:id="@+id/add_new_friends_refresh"
        android:layout_width="203dp"
        android:layout_height="40dp"
        android:text="@string/refresh"
        app:backgroundTint="#009688"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>