<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <Button
        android:id="@+id/profile_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@id/main_horizontal"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/profile_history"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/profile_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_horizontal"
        app:layout_constraintLeft_toRightOf="@+id/profile_info"
        app:layout_constraintRight_toLeftOf="@+id/profile_history"
        app:backgroundTint="#00BCD4"
        tools:layout_editor_absoluteX="302dp"
        tools:layout_editor_absoluteY="25dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/profile_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/profile_friends"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_horizontal"
        app:backgroundTint="#00BCD4"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="25dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <FrameLayout
        android:id="@+id/profile_placeholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".80"
        app:layout_constraintTop_toTopOf="@+id/main_horizontal"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>